<resources>
    <string name="app_name">Travelku</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="tagline">with millions of users all over the world, we gives you the ability to connect with people no matter where you are</string>
    <string name="find_a_new_destination_in_your_journey">find a new destination in your journey</string>
    <string name="forgot_your_password">Forgot your password</string>
    <string name="sign_in1">Sign In</string>
    <string name="password">Password</string>
    <string name="Mobile">Mobile</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="welcome">Welcome</string>
    <string name="zulvan_z">Zulvan Z</string>
    <string name="flying">flying</string>
    <string name="to">to ?</string>
    <string name="where_are_you">where are you</string>
    <string name="enter_your_destination">Enter your destination</string>
    <string name="all">All</string>
    <string name="upcoming_trips">Upcoming Trips</string>
    <string name="_25_mei_12_30">25 Mei, 12:30</string>
    <string name="las">LAS</string>
    <string name="las_vegas">Las Vegas</string>
    <string name="_15_30">15:30</string>
    <string name="sfo">SFO</string>
    <string name="san_francisco">San Francisco</string>
    <string name="home">Home</string>
    <string name="receipt">Receipt</string>
    <string name="account">Account</string>
    <string name="popular">Popular</string>
    <string name="indonesia">Indonesia</string>
    <string name="singapura">Singapura</string>
    <string name="new_york">New York</string>
    <string name="australia">Australia</string>
    <string name="hawai">Hawai</string>
    <string name="explore">Explore</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="hello_backpacker">Hello, Backpacker</string>
    <string name="indonesian">Indonesian</string>
    <string name="where_do_you_want_to_go">Where Do You Want To Go?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="kami_akan_megirimkan_link_untuk_pergantian_password_ke_email">Kami akan megirimkan link untuk pergantian password ke Email.</string>
    <string name="masukkan_email">masukkan email</string>
    <string name="about_destination">Sorry, flights are currently unavailable</string>
    <string name="tourism_is_a_trip_made_for_recreation_or_vacation_and_also_preparations_are_made_for_this_activity">due to the corona virus problem, flights are temporarily unavailable.</string>
    <string name="nyalakan_notifikasi_kembali"><![CDATA[Nyalakan Notifikasi & Kembali]]></string>
    <string name="nyalakan_notifikasi">This is Information</string>
    <string name="dummy_text">Do you want to go back to the main menu?</string>
    <string name="button_oke">Yes</string>
    <string name="no">No</string>
    <string name="from_notification">From Notification</string>
    <string name="singapura1">Singapura</string>
    <string name="new_york1">New York</string>
    <string name="australia1">Australia</string>
    <string name="belanda1">Belanda</string>
    <string name="belanda">Belanda</string>


</resources>
