<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".IndonesiaActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardProfilePicture"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_account"
            android:tint="@color/SelectedMenu"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textHello"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/hello_backpacker"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cardProfilePicture"
        app:layout_constraintEnd_toStartOf="@+id/cardProfilePicture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardProfilePicture"/>

    <TextView
        android:id="@+id/textIndonesian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/belanda1"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/cardProfilePicture"/>

    <TextView
        android:id="@+id/textWhereDoYouWantToGo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/where_do_you_want_to_go"
        android:textColor="#757575"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/textIndonesian"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/locationViewPager5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/bottombar1"
        app:layout_constraintTop_toBottomOf="@+id/textWhereDoYouWantToGo"/>

    <me.ibrahimsn.lib.SmoothBottomBar
        android:id="@+id/bottombar1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:backgroundColor="@color/Background"
        app:iconSize="20dp"
        app:iconTint="@color/colorPrimaryDark"
        app:iconTintActive="@android:color/white"
        app:indicatorColor="@color/SelectedMenu"
        app:indicatorRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/menu_navigation1"
        app:textColor="@android:color/white"
        app:textSize="15sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>