<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/walpaper1"
    android:gravity="center"
    tools:context=".ForgotPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:background="@drawable/forgot_password">

        <TextView
            android:id="@+id/Forgot1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/forgot_password"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="@dimen/_15ssp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/kami_akan_megirimkan_link_untuk_pergantian_password_ke_email"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_9ssp"
            app:layout_constraintTop_toBottomOf="@+id/Forgot1"
            app:layout_constraintStart_toStartOf="parent"
            />

        <ImageView
            android:id="@+id/imageEmail"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_email"
            android:tint="@android:color/holo_orange_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDescription"/>

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:hint="@string/masukkan_email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:minHeight="25dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="15sp"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@+id/imageEmail"
            app:layout_constraintEnd_toEndOf="@id/Forgot1"
            app:layout_constraintStart_toEndOf="@id/imageEmail"
            app:layout_constraintTop_toTopOf="@+id/imageEmail"
            android:importantForAutofill="no"/>

        <View
            android:id="@+id/viewDividerEmail"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@android:color/white"
            app:layout_constraintEnd_toEndOf="@+id/Forgot1"
            app:layout_constraintStart_toStartOf="@+id/Forgot1"
            app:layout_constraintTop_toBottomOf="@+id/inputEmail"/>

        <ImageView
            android:id="@+id/ButtonForgot1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/button_forgot_password"
            android:contentDescription="@string/app_name"
            android:padding="10dp"
            android:src="@drawable/ic_arrow_forward"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewDividerEmail"/>




    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>